added live links and tweaked gsap animation

--- a/index.html
+++ b/index.html
@@ -39,51 +39,113 @@
         </nav>
       </div>
     </header>
+
     <section id="start" class="myContainer">
       <div class="start-info">
         <div class="profile-left">
           <div class="image-container">
             <div class="profile-image"></div>
-            <h3 class="profile-image-name">Emmanuel Itakpe</h3>
+            <h3 class="profile-image-name title-1">Emmanuel Itakpe</h3>
           </div>
         </div>
         <div class="profile-info">
           <div>
-            <h3 class="profile-info-header">Hi there.. 👋</h3>
-            <hr />
-            <p class="profile-info-text">I'm Emmanuel Itakpe, a self-taught Frontend Developer, take a look at my projects let's work together.</p>
+            <h3 class="profile-info-header title-1">HI there.. 👋</h3>
 
-            <a type="button" class="btn btn-primary">CONTACT</a>
+            <hr />
+            <p class="profile-info-text"><span class="tl-text"> I'm Emmanuel Itakpe, a self-taught Frontend Developer, take a look at my projects let's work together. </span></p>
+
+            <a type="button" class="btn btn-outline-primary">CONTACT</a>
             <a type="button" class="btn btn-outline-secondary ml-3">RESUME</a>
           </div>
         </div>
       </div>
     </section>
-    <section id="projects" class="myContainer">
-      <h2 class="section-title">
-        PROJECTS<span><i class="fas fa-tasks"></i></span>
-      </h2>
-      <div class="projects-grid">
-        <div class="project-item">
-          <div class="project-item--graphics">
+
+    <section id="projects">
+      <div class="myContainer">
+        <h2 class="section-title">
+          PROJECTS<span><i class="fas fa-tasks"></i></span>
+        </h2>
+
+        <div class="projects-grid">
+          <div class="project-item">
+            <h4 class="title title-1">JS Game</h4>
             <div class="project-image">
               <img src="/images/projects/jsGame_edited.jpg" alt="" />
             </div>
-            <div class="project-stack"></div>
-          </div>
-          <div class="projects-item-info"></div>
-        </div>
-        <div class="project-item">
-          <div class="project-item--graphics">
-            <div class="project-image">
-              <img src="/images/projects/jsGame_edited.jpg" alt="" />
+            <div class="project-info">
+              <div class="project-info-stack title">
+                <div class="stacksss">HTML CSS JS jQuery Neumorphism Git GitHub</div>
+                <div class="links">
+                  <a href="https://github.com/Emmanuel-Develops/javascript_simon_game" target="_blank"><i class="fab fa-github icons"></i></a>
+                  <a href="https://emmanuel-develops.github.io/javascript_simon_game/" target="_blank"><i class="fas fa-external-link-square-alt icons"></i></a>
+                </div>
+              </div>
+              <div class="project-info-text">I started this challenge to understand the neuphormism design principle, build a vanilla JavaScript game and implement jQuery. Implememting Neuphormism design was exhilarating. Apart from selecting the DOM I preferred vanilla JS to jQuery.</div>
             </div>
-            <div class="project-stack">html css js</div>
           </div>
-          <div class="projects-item-info"></div>
+
+          <div class="project-item">
+            <h4 class="title title-1">Hotel Landing Page</h4>
+            <div class="project-image">
+              <img src="/images/projects/hotel_edited2.jpg" alt="" />
+            </div>
+            <div class="project-info">
+              <div class="project-info-stack title">
+                <div class="stacksss">HTML SCSS Grid BootStrap Git GitHub</div>
+                <div class="links">
+                  <a href="https://github.com/Emmanuel-Develops/Team-Olympians-FE-Hotel-HNG" target="_blank"><i class="fab fa-github icons"></i></a>
+                  <a href="https://emmanuel-develops.github.io/Team-Olympians-FE-Hotel-HNG/dist/index2.html" target="_blank"><i class="fas fa-external-link-square-alt icons"></i></a>
+                </div>
+              </div>
+              <div class="project-info-text">This project was my first dive into remote collaborative projects and leading a team. It was at a tech internship where I was team leader of a 16 person group. We relied heavily on GitHub and precise communication, the project took us a week to complete.</div>
+            </div>
+          </div>
+
+          <div class="project-item">
+            <h4 class="title title-1">NORD Landing Page</h4>
+            <div class="project-image">
+              <img src="/images/projects/nord_edited.jpg" alt="" />
+            </div>
+            <div class="project-info">
+              <div class="project-info-stack title">
+                <div class="stacksss">HTML CSS JS BootStrap Git GitHub</div>
+                <div class="links">
+                  <a href="https://github.com/Emmanuel-Develops/OnePlusNord-LandingPage-FCC" target="_blank"><i class="fab fa-github icons"></i></a>
+                  <a href="https://emmanuel-develops.github.io/OnePlusNord-LandingPage-FCC/" target="_blank"><i class="fas fa-external-link-square-alt icons"></i></a>
+                </div>
+              </div>
+              <div class="project-info-text">
+                This project was from <span class="detail"> <a href="#">FreeCodeCamp</a> </span>, a challenge to create a landing page. I learned BootStrap for this project. Nord had just released it was an inspiration as i loved what it offered. PS: Hit me up if you're feeling generous.
+              </div>
+            </div>
+          </div>
+
+          <div class="project-item">
+            <h4 class="title title-1">Customized Form</h4>
+            <div class="project-image">
+              <img src="/images/projects/codepen_edited.jpg" alt="" />
+            </div>
+            <div class="project-info">
+              <div class="project-info-stack title">
+                <div class="stacksss">HTML SCSS Git GitHub</div>
+                <div class="links">
+                  <a href="https://codepen.io/emmanuel-develops/full/xxZzBxE" target="_blank"><i class="fab fa-github icons"></i></a>
+                  <a href="https://codepen.io/emmanuel-develops/full/xxZzBxE" target="_blank"><i class="fas fa-external-link-square-alt icons"></i></a>
+                </div>
+              </div>
+              <div class="project-info-text">
+                Here's another project from <span class="detail"> <a href="#">FreeCodeCamp</a> </span>, I learnt a lot regarding forms and my first experience with codepen.
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <!-- <footer>copyright</footer> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
     <script src="./main.js"></script>
   </body>
 </html>
